# QTextureDownloader

./: CMakeLists.txt  README.md
QTextureDownloader/: CMakeLists.txt
QTextureDownloader/include/: qtexture_downloader.hpp
QTextureDownloader/include/qtd/: config.hpp  delegates.hpp  image_fetcher.hpp  json_fetcher.hpp  logger.hpp  texture.hpp  texture_downloader.hpp  texture_manager.hpp  utils.hpp
QTextureDownloader/src/: config.cpp  logger.cpp
QTextureDownloader/src/core/: download_file.cpp  image_fetcher.cpp  json_fetcher.cpp  texture.cpp  texture_manager.cpp  utils.cpp
QTextureDownloader/src/widgets/: delegates.cpp  texture_downloader.cpp
scripts/: format_src.sh
tests/test_qtexture_downloader/: CMakeLists.txt  darkstyle.css  main.cpp
